--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@auth0/angular-jwt": "^2.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.3.0",
+    "ngx-image-cropper": "^1.3.9",
     "rxjs": "6.0.0",
     "zone.js": "~0.8.26"
   },
