--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/cli": "~8.3.29",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
+    "@angular-devkit/schematics": "10.2.4",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
