--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.2.5",
-    "@angular/cdk": "^7.3.5",
+    "@angular/cdk": "11.2.13",
     "@angular/common": "^10.2.5",
     "@angular/compiler": "^10.2.5",
     "@angular/core": "^10.2.5",
-    "@angular/fire": "^5.1.2",
     "@angular/forms": "^10.2.5",
     "@angular/material": "^7.3.5",
     "@angular/platform-browser": "^10.2.5",
