--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.3.0",
     "@angular/material": "^17.3.9",
     "@angular/platform-browser": "^17.3.0",
@@ -22,8 +23,7 @@
     "@angular/router": "^17.3.0",
     "@auth0/angular-jwt": "5.2.0",
     "firebase": "^10.12.0",
-    "ng2-file-upload": "5.0.0",
-    "ngx-image-cropper": "8.0.0",
+    "ngx-image-cropper": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
