--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@auth0/angular-jwt": "5.2.0",
+    "fabric": "^6.0.2",
     "firebase": "^10.12.0",
     "ngx-image-cropper": "^8.0.0",
     "rxjs": "~7.8.0",
