--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "^17.3.0",
     "fabric": "^6.0.2",
     "firebase": "^10.12.0",
+    "masonry-layout": "^4.2.2",
     "ngx-image-cropper": "^8.0.0",
+    "ngx-masonry": "^14.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -33,6 +35,7 @@
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/masonry-layout": "^4.2.8",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
