--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,9 @@
             "outputPath": "dist/client",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": ["zone.js"],
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -71,7 +73,7 @@
             "production": {
               "buildTarget": "Fundoo-Client:build:production"
             },
-            "development":{
+            "development": {
               "buildTarget": "Fundoo-Client:build:development"
             }
           },
